@@ -36,6 +36,9 @@ v0.10.6
     pipe still uses level-triggered scheme
 [B] crofsock: don't let handle_write_event run at state STATE_CLOSED 
 [B] crofsock: do not wakeup tx in case its blocked
+[B] crofconn: fixed potential race condition during connection 
+    establishment (HELLO negotiation)
+[B] crofsock: add rxthread wakeup handler
 
 v0.10.4
 
